# panel.backend

./: .gitignore  cloudbuild.yaml  package-lock.json
svc-vivienda/: .env.example  Dockerfile  alembic.ini  docker-compose.dev.yml  pyproject.toml  seed_cordoba_hogar.py  seed_cordon_cuneta_v2.py
svc-vivienda/alembic/: env.py
svc-vivienda/alembic/versions/: 20260629_0001_initial_schema.py  20260630_0002_cordon_cuneta_v2.py  20260701_0003_cc_pedidos.py  20260702_0004_portal_usuarios.py  20260702_0005_update_cc_data.py  20260702_0006_cordoba_hogar.py  20260704_0007_estado_general_schema.py  20260704_0008_data_update.py  20260704_0009_unify_estados.py  20260704_0010_migrate_obs_docexp.py  20260705_0011_update_cc_from_panel25.py  20260705_0012_backfill_cc_historial_panel25.py  20260708_0013_add_monto_por_casa_ch_config.py  20260713_0014_unique_cc_municipio_activo.py  20260713_0015_unique_ch_localidad_activa.py  20260713_0016_cc_checklist_tecnico.py  20260713_0017_pedidos_secretaria_nombre.py  20260716_0017_widen_cc_checklist_text_cols.py  20260716_0018_widen_cc_checklist_text_cols.py
svc-vivienda/app/: audit.py  auth.py  config.py  database.py  main.py  pubsub.py
svc-vivienda/app/asignaciones/: models.py  repository.py  router.py  schemas.py  service.py
svc-vivienda/app/geo/: models.py
svc-vivienda/tests/: conftest.py  test_asignaciones.py  test_beneficiarios.py  test_cc_checklist_sync.py  test_cordoba_hogar.py  test_cordon_cuneta.py  test_expedientes.py  test_expedientes_state_machine.py  test_health.py  test_internal_router.py  test_portal.py  test_programas.py
(+35 files in other folders)
