[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "svc-vivienda"
version = "0.1.0"
description = "Servicio de Vivienda — Ministerio de Cooperativas y Mutuales de Córdoba"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "google-auth==2.35.0",
    "google-cloud-pubsub==2.27.1",
    "google-cloud-secret-manager==2.21.0",
    "python-dotenv==1.0.1",
    "httpx==0.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.27.2",
    "aiosqlite==0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
